--- a/sabah_lichens.Rmd
+++ b/sabah_lichens.Rmd
@@ -50,7 +50,7 @@ Lichen taxonomic and functional group richness (_S_) and Shannon-Wiener diversit
 
 Tree girth was converted into a categorical variable (s < 100 cm; m = 100--199 cm; l $\geq$ 200 cm).
 
-To enable plot-level characterisation of tree traits, we calculated the Shannon-Wiener diversity of (1) girth category and (2) bark type, and the proportion of (3) trees with buttresses or flutes and (4) dipterocarp trees within each plot.
+To enable plot-level characterisation of tree traits, we calculated (1) the Shannon-Wiener diversity of bark type, and the proportion of (2) large trees (i.e. girth $\geq$ 200 cm), (3) trees with buttresses or flutes and (4) dipterocarp trees within each plot.
 
 
 ### Differences in lichen diversity among sites
@@ -70,7 +70,7 @@ Relative contributions of individual lichen taxa or functional groups to differe
 
 <!-- The variables identified by the BIOENV analysis were then used in a ... -->
 
-The three tree functional traits (= 'environmental' variables) were used in a canonical analysis of principal coordinates (CAP; Anderson & Willis, 2003, _Ecology_ 84:511--525) to enable dissimilarities in lichen communities to be visualised in relation to tree traits. The resulting ordination plot incorporated vectors representing Spearman rank correlations between environmental variables (expressed as continuous/ordinal numerical) and the first two CAP axes. The significance of the overall model (based on the sum of all eigenvalues) and of constraining variables (marginal terms) were assessed via ANOVA-like permutation tests involving `r format(n_perm, big.mark = ",")` permutations. Spearman rank correlation coefficients between individual taxonomic or functional group abundances and CAP axes were calculated to identify the most important groups (i.e. $|\rho| \geq 0.35$) contributing to variability in lichen assemblage structure.
+To enable dissimilarities in lichen communities to be visualised in relation to tree functional traits, the four tree traits (= 'environmental' variables) were used in a distance-based redundancy analysis, a variant of canonical analysis of principal coordinates (CAP; Anderson & Willis, 2003, _Ecology_ 84:511--525), using the `capscale` function in the R package `vegan` (version 2.5-6; Oksanen et al., 2019). The resulting ordination plot incorporated vectors representing Spearman rank correlations between original environmental variables (expressed as continuous/ordinal numerical, where possible) and the first two CAP axes. The significance of the overall model (based on the sum of all eigenvalues) and of constraining variables (marginal terms) were assessed via ANOVA-like permutation tests involving `r format(n_perm, big.mark = ",")` permutations. Spearman rank correlation coefficients between individual taxonomic or functional group abundances and CAP axes were calculated to identify the most important groups (i.e. $|\rho| \geq$ `r cor_spp_x`) contributing to variability in lichen assemblage structure.
 
 (I'm not sure if it is possible to account for the effects of plot or site, e.g. plot nested within site, when determining the significance of the CAP model, to be consistent with the PERANOVAs and PERMANOVAs.)
 
@@ -215,7 +215,7 @@ simp_li_func[[1]] %>%
 
 <!-- Tree girth and presence of buttresses/flutes were identified by BIOENV as key tree traits influencing lichen community structure, in terms of both taxonomic and functional groups (BIOENV; $\rho$ = `r rep_2dp(bioenv_taxa_rho)` and $\rho$ = `r rep_2dp(bioenv_func_rho)`, respectively). -->
 
-CAP axis 1 correlated positively with tree girth, while axis 2 appeared to be related to presence of buttresses/flutes and bark type; however, only tree girth was significant as a constraining variable (taxonomic groups: pseudo-_F_~2,257~ = `r rep_2dp(cap_taxa_margin_f["girth"])`, P `r rep_p(cap_taxa_margin_p["girth"])`; functional groups: pseudo-_F_~2,257~ = `r rep_2dp(cap_func_margin_f["girth"])`, P `r rep_p(cap_func_margin_p["girth"])`), suggesting that it was more important than buttress/flute presence and bark type in structuring lichen communities.
+CAP axis 1 correlated positively with tree girth, while axis 2 appeared to be related to presence of buttresses/flutes and bark type; however, only tree girth was significant as a constraining variable (taxonomic groups: pseudo-_F_~2,257~ = `r rep_2dp(cap_taxa_margin_f["girth"])`, P `r rep_p(cap_taxa_margin_p["girth"])`; functional groups: pseudo-_F_~2,257~ = `r rep_2dp(cap_func_margin_f["girth"])`, P `r rep_p(cap_func_margin_p["girth"])`), suggesting that it was more important than buttress/flute presence, bark type and dipterocarp vs. non-dipterocarp in structuring lichen communities.
 
 ![(a) CAP ordination plot of lichen community structure (taxonomic groups) according to categorical environmental variables. (b) Spearman rank correlation coefficients between CAP axes and individual taxa for which $|\rho| \geq$ `r cor_spp_x`.](./figs/cap_taxa.pdf)
 
