--- a/sabah_lichens.Rmd
+++ b/sabah_lichens.Rmd
@@ -50,31 +50,39 @@ Lichen taxonomic and functional group richness (_S_) and Shannon-Wiener diversit
 
 Tree girth was converted into a categorical variable (s < 100 cm; m = 100--199 cm; l $\geq$ 200 cm).
 
-To enable plot-level characterisation of tree traits, we calculated (1) the Shannon-Wiener diversity of bark type, and the proportion of (2) large trees (i.e. girth $\geq$ 200 cm), (3) trees with buttresses or flutes and (4) dipterocarp trees within each plot.
+To enable plot-level characterisation of tree traits as continuous variables, we calculated (1) the Shannon-Wiener diversity of bark type categories, and the proportion of (2) large trees (i.e. girth $\geq$ 200 cm), (3) trees with buttresses or flutes and (4) dipterocarp trees within each plot.
 
 
 ### Differences in lichen diversity among sites
 
 Permutational analysis of variance (PERANOVA) was used to test for differences in lichen taxonomic and functional group richness and diversity among the three sites. Differences in multivariate lichen community structure among sites were tested using permutational multivariate analysis of variance (PERMANOVA), separately for taxonomic and functional groups. Models included the factor 'site' (fixed, 3 levels: D, M and S), with a planned comparison (D, M) vs. S (i.e. undisturbed sites vs. disturbed site). 'Plot' (nested within site) was also included a random factor to account for potential non-independence of trees located within the same plot. Where a significant effect of 'site' was identified, pairwise permutational post-hoc tests were used to reveal differences between individual factor levels. Analyses involved 9,999 permutations of residuals under a reduced model, and tests were based on Type II Sums of Squares owing to unequal numbers of observations among groups.
 
-(Normally, non-metric multidimensional scaling (MDS) plots, which are unconstrained by environmental variables, would be used to visualise overall patterns in lichen community structure... however, MDS analyses failed to converge on a result.)
+To complement these unconstrained multivariate analyses, overall patterns in lichen community structure were visualised using non-metric multidimensional scaling (MDS) ordination plots, based on both taxonomic and functional groups.
 
-Relative contributions of individual lichen taxa or functional groups to differences in community structure between groups of sites were determined via similarity of percentages (SIMPER; Clarke, 1993, _Aus. J. Ecol._ 18:117--143).
+(Although the MDS analyses [performed using the `metaMDS` function in the R package `vegan`] failed to 'converge' on a result and produced relatively high 2D stress values, they still serve as a useful representation of overall patterns -- to be interpreted with some caution.)
+
+Relative contributions of individual lichen taxa or functional groups to differences in community structure between groups of sites identified by PERMANOVA were determined via similarity of percentages (SIMPER; Clarke, 1993, _Aus. J. Ecol._ 18:117--143).
+
+For all multivariate tests (both unconstrained and constrained), community dissimilarities were calculated using the zero-adjusted Bray-Curtis coefficient (Clarke _et al._, 2006, _J. Exp. Mar. Biol. Ecol._ 330:55--80), based on $log10(x+1)$-transformed abundance data to reduce the influence of numerically dominant taxonomic/functional groups. Euclidean distances were calculated from environmental data, which were _z_-standardised to account for scaling differences between variables.
 
 
-### Relationships between lichen community structure and tree functional traits
+### Relationships between lichen community structure and tree functional traits ('tree-level' & 'plot-level')
 
-<!-- Pairwise Spearman rank correlations were used to assess the extent of collinearity among tree functional traits (= 'environmental' variables). There were no strong correlations between tree girth, bark type and presence of buttresses/flutes ($|\rho| \leq\ 0.50$), therefore all three variables were included in subsequent analyses. -->
+To enable dissimilarities in lichen communities to be visualised in relation to tree functional traits, the four tree traits (= 'environmental' variables) were used in a constrained distance-based redundancy analysis (dbRDA), a variant of canonical analysis of principal coordinates (CAP; Anderson & Willis, 2003, _Ecology_ 84:511--525), using the `capscale` function in the R package `vegan` (version 2.5-6; Oksanen et al., 2019). While traditional CAP may be performed as a 'discriminant analysis' involving a single grouping variable, dbRDA allows for the inclusion of multiple categorical constraints.
 
-<!-- The biota--environment (BIOENV; Clarke & Ainsworth, 1993, _Mar. Ecol. Prog. Ser._ 92:205--219) routine was used to identify the optimal subset of environmental variables accounting for variability in lichen community structure, via maximisation of the rank correlation between environmental and biological distance matrices. -->
+This analysis, performed separately for lichen taxonomic and functional groups, was conducted at both (1) 'tree-level', whereby individual trees were treated as replicates, with tree traits expressed as categorical variables, and (2) 'plot-level', involving summed lichen abundances and continuous tree trait variables calculated for each plot as described above. To account for variation among plots in the tree-level analysis, 'plot' was included as a conditioning variable in the dbRDA model.
 
-<!-- The variables identified by the BIOENV analysis were then used in a ... -->
+Prior to plot-level analyses, pairwise Spearman rank correlations were used to assess the extent of collinearity among tree traits. There were no strong correlations between bark type diversity and proportions of large trees, trees with buttresses/flutes and dipterocarp trees ($|\rho| \leq\ 0.50$), therefore all four variables were included in subsequent analyses. The biota--environment (BIOENV; Clarke & Ainsworth, 1993, _Mar. Ecol. Prog. Ser._ 92:205--219) routine was used to identify the optimal subset of environmental variables accounting for variability in lichen community structure, via maximisation of the rank correlation between environmental and biological distance matrices. The variables identified by the BIOENV analysis were then used in the dbRDA analysis. The resulting ordination plots for plot-level analyses incorporated vectors representing Spearman rank correlations between continuous environmental variables and the first two CAP axes.
 
-To enable dissimilarities in lichen communities to be visualised in relation to tree functional traits, the four tree traits (= 'environmental' variables) were used in a distance-based redundancy analysis, a variant of canonical analysis of principal coordinates (CAP; Anderson & Willis, 2003, _Ecology_ 84:511--525), using the `capscale` function in the R package `vegan` (version 2.5-6; Oksanen et al., 2019). The resulting ordination plot incorporated vectors representing Spearman rank correlations between original environmental variables (expressed as continuous/ordinal numerical, where possible) and the first two CAP axes. The significance of the overall model (based on the sum of all eigenvalues) and of constraining variables (marginal terms) were assessed via ANOVA-like permutation tests involving `r format(n_perm, big.mark = ",")` permutations. Spearman rank correlation coefficients between individual taxonomic or functional group abundances and CAP axes were calculated to identify the most important groups (i.e. $|\rho| \geq$ `r cor_spp_x`) contributing to variability in lichen assemblage structure.
+The significance of overall models (based on the sum of all eigenvalues) and of constraining variables (marginal terms) were assessed via ANOVA-like permutation tests involving `r format(n_perm, big.mark = ",")` permutations. Spearman rank correlation coefficients between individual taxonomic or functional group abundances and CAP axes were calculated to identify the most important groups (i.e. $|\rho| \geq$ `r cor_spp_x`) contributing to variability in lichen assemblage structure.
 
-(I'm not sure if it is possible to account for the effects of plot or site, e.g. plot nested within site, when determining the significance of the CAP model, to be consistent with the PERANOVAs and PERMANOVAs.)
 
-For all multivariate tests, community dissimilarities were calculated using the zero-adjusted Bray-Curtis coefficient (Clarke _et al._, 2006, _J. Exp. Mar. Biol. Ecol._ 330:55--80), based on $log10(x+1)$-transformed abundance data to reduce the influence of numerically dominant taxonomic/functional groups. Euclidean distances were calculated from environmental data, which were _z_-standardised to account for scaling differences between variables.
+### Classification of sites based on lichen communities ('plot-level')
+
+A 'plot-level' CAP analysis, based on summed lichen abundances, was used to estimate the accuracy with which plots may be assigned to sites based on lichen community structure. This cross-validation method involves the 'leave-one-out' approach of Lachenbruch and Mickey (1968; _Technometrics_ 10:1--11) to determine the proportion of individual observations (in this case, plots) that are successfully allocated to the correct group.
+
+
+
 
 (Check whether exclusion of rare taxonomic/functional groups (e.g. overall mean abundance $\leq$ 0.1) alters results substantially.)
 
