--- a/sabah_lichens.Rmd
+++ b/sabah_lichens.Rmd
@@ -28,7 +28,7 @@ Sampling was conducted at three sites within different areas of lowland forest i
 
 At each site, ... (D and M = 96; S = 72).
 
-The following functional traits were recorded for each tree: (1) girth, measured as ...; (2) bark type (DR = dry ancient, S = smooth, C = scaly, R = ridged/rough); (3) the presence of buttresses or flutes; and (4) dipterocarp vs. non-dipterocarp species.
+The following functional traits were recorded for each tree: (1) girth, measured as $\dots$; (2) bark type (DR = dry ancient, S = smooth, C = scaly, R = ridged/rough); (3) the presence of buttresses or flutes; and (4) dipterocarp vs. non-dipterocarp species. For most, but not all, trees, pH was determined from the mean of up to three readings, measured by $\dots$.
 
 ```{r nobs_tables, eval = FALSE, echo = FALSE}
 # check actual numbers of replicates per site
@@ -48,7 +48,7 @@ Lichen taxonomic and functional group richness (_S_) and Shannon-Wiener diversit
 
 <!-- Tree bark type was coded numerically in relation to increasing perceived water holding capacity, i.e. ancient dry = 1, smooth = 2, scaly = 3, ridged/rough = 4. (See _Queries_ below.) -->
 
-Tree girth was converted into a categorical variable (s < 100 cm; m = 100--199 cm; l $\geq$ 200 cm).
+Tree girth and mean pH were converted into categorical variables (girth: s < 100 cm; m = 100--199 cm; l $\geq$ 200 cm; pH: vl < 2; l 2 $\leq x <$ 4; m 4--6; h $\geq$ 6).
 
 To enable plot-level characterisation of tree traits as continuous variables, we calculated (1) the Shannon-Wiener diversity of bark type categories, and the proportion of (2) large trees (i.e. girth $\geq$ 200 cm), (3) trees with buttresses or flutes and (4) dipterocarp trees within each plot.
 
